welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:3: error: '<-' expected but ')' found.
do {for (nbPas<=5){
                 ^Poucet:16: error: illegal start of simple expression
} while (crossing()==true) 
^